# Skillplus-ai-data-analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  database_migration.sql  deploy.sh  docker-compose.prod.yml  docker-compose.yml  skill-pulse.service
.github/: CODEOWNERS  pull_request_template.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/agents/: custom_loader.py
backend/agents/edges/: edges.py
backend/agents/graphs/: graph.py  lcel_workflow copy 2.py  lcel_workflow copy.py  lcel_workflow.py  temp.py
backend/agents/nodes/: base.py  nodes.py
backend/agents/prompts/: prompts copy.py  prompts.py
backend/core/: config.py  constants.py  database.py  exceptions.py  logger.py  security.py  utils.py
backend/database/: db.sqlite
backend/models/: auth.py  data_analysis copy.py  data_analysis.py  database.py  graph_templates.py  responses.py  templates.py
backend/plots/: .gitkeep
backend/routes/: auth.py  data_analysis.py  graph_templates.py  metadata.py  templates.py  uploads.py
backend/services/: auth.py  data_analysis.py  template_service.py
backend/tests/: __init__.py  conftest.py  test_analysis.py  test_auth.py  test_config.py  test_health.py  test_security.py  test_templates.py  test_uploads.py  test_utils.py
backend/uploads/: 992ef27a-a483-48df-aec8-428cf4383280.csv
backend/utils/: seed_graph_templates.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md
frontend/: .dockerignore  .env.example  .eslintrc.json  (+7 more)
(+47 files in other folders)
